fix(Moment): fix comment spacing

--- a/src/components/Comment/Feed/styles.module.css
+++ b/src/components/Comment/Feed/styles.module.css
@@ -60,6 +60,10 @@
 .contentContainer {
   margin-top: var(--sp12);
 
+  &.spacingLeft {
+    margin-left: var(--sp48);
+  }
+
   &.descendant {
     width:;
   }
